--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<name>Checks correctness of generated CSV data</name>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.assembly.version>2.2.1</maven.assembly.version>
 		<junit-version>4.10</junit-version>
 		<log4j-version>1.2.17</log4j-version>
