add .csv output

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,41 @@
-# define the console appender
-log4j.appender.consoleAppender = org.apache.log4j.ConsoleAppender
+# map console appender to root logger (all log messages will go to this appender)
+log4j.rootLogger = INFO, stdout
+log4j.logger.file = ERROR, file
 
-# now define the layout for the appender
-log4j.appender.consoleAppender.layout = org.apache.log4j.PatternLayout
-# log4j.appender.consoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x -%m%n
-log4j.appender.consoleAppender.layout.ConversionPattern=%-5p %c %x %m%n
-# log4j.appender.consoleAppender.layout.ConversionPattern=%m%n
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%-5p %c %x %m%n
+log4j.appender.stdout.Threshold = INFO
 
-# now map our console appender as a root logger, means all log messages will go to this appender
-log4j.rootLogger = INFO, consoleAppender
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+# can this be redirected programmatically?
+log4j.appender.file.File=validation_errors.csv
+log4j.appender.file.MaxFileSize=100KB
+# Keep one backup file
+log4j.appender.file.MaxBackupIndex=0
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%m%n
+log4j.additivity.file=false
+log4j.appender.file.Threshold = ERROR
+
+# *** Levels ***
+#TRACE
+#DEBUG
+#INFO
+#WARN
+#ERROR
+#FATAL
+#TRACE < DEBUG < INFO < WARN < ERROR < FATAL
+
+# *** Layout ***
+#
+# %r (%F:%L) [%t] %-5p %c - %m%n
+# 176 (MyApp2.java:12) [main] INFO  org.foo.Bar - Located nearest gas station.
+#
+# %r		ms since program start
+# %F		file name
+# %L		line number
+# [%t]		thread making the log request
+# %-5p 		level of the log statement
+# %c 		name of the logger associated with the log request
+# %m		message
