--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<log4j-version>1.2.17</log4j-version>
 		<trove4j-version>3.0.3</trove4j-version>
 		<commmons-validator-version>1.4.0</commmons-validator-version>
+		<commmons-cli-version>1.2</commmons-cli-version>
 	</properties>
 
 
@@ -39,6 +40,11 @@
 			<groupId>commons-validator</groupId>
 			<artifactId>commons-validator</artifactId>
 			<version>${commmons-validator-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>${commmons-cli-version}</version>
 		</dependency>
 	</dependencies>
 
